Updated Dockerfile to use navikt/java:8